[feat]: Bye bye http
