# docs/swagger.json
@@ -45,6 +45,33 @@
                     }
                 }
             }
+        },
+        "/api/v1/teacher/verify": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "verify teacher account",
+                "parameters": [
+                    {
+                        "description": "Request body with verifying teacher ID",
+                        "name": "teacherID",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/transfer.TeacherVerifyRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -82,6 +109,17 @@
             "type": "object",
             "properties": {
                 "teacherID": {
+                    "type": "string"
+                }
+            }
+        },
+        "transfer.TeacherVerifyRequest": {
+            "type": "object",
+            "required": [
+                "teacher_id"
+            ],
+            "properties": {
+                "teacher_id": {
                     "type": "string"
                 }
             }
