# internal/service/model/teacher.go
@@ -1,5 +1,7 @@
 package model
 
+import "github.com/google/uuid"
+
 type Teacher struct {
 	FirstName           string
 	LastName            string
@@ -7,4 +9,8 @@ type Teacher struct {
 	ReportEmail         string
 	Username            string
 	HashedPasswordBytes []byte
+}
+
+type TeacherVerify struct {
+	TeacherID uuid.UUID
 }
